# skygen

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README  README.md  TODO.md  config-example.toml
.github/workflows/: rust.yml
crates/skygen/: Cargo.toml
crates/skygen/assets/templates/: cargo.toml.tera  lib.rs.tera  mod.rs.tera  model.rs.tera  operation.rs.tera
crates/skygen/open-api-specs/: exoscale-api.json
crates/skygen/src/: ir.rs  lib.rs  spec_loader.rs
crates/skygen/src/generator/: create_writer.rs  mod.rs  project.rs
crates/skygen/src/resolver/: mod.rs  pointer.rs  resolve.rs
crates/skygen/src/transformer/: mod.rs  schemas.rs  transformer.rs
crates/skygen/src/transformers/: mod.rs  transformer.rs
examples/: hetzner.json
open-api-specs/: bundled-digitalocean.yaml
open-api-specs/cloudflare/: config.toml
open-api-specs/digitalocean/: config.toml
open-api-specs/exoscale/: exoscale.yaml
open-api-specs/scaleway/: manifest.tsv  scaleway.apple_silicon.v1alpha1.Api.yml  scaleway.apple_silicon.v1alpha1.PrivateNetworkApi.yml  scaleway.audit_trail.v1alpha1.Api.yml  scaleway.autoscaling.v1alpha1.Api.yml  scaleway.billing.v2beta1.Api.yml  scaleway.block.v1.Api.yml  scaleway.cockpit.v1.GlobalApi.yml  scaleway.cockpit.v1.RegionalApi.yml  scaleway.containers.v1beta1.Api.yml  scaleway.datawarehouse.v1beta1.Api.yml  scaleway.domain.v2beta1.Api.yml  scaleway.domain.v2beta1.RegistrarApi.yml  scaleway.edge_services.v1beta1.Api.yml  scaleway.environmental_footprint.v1alpha1.UserApi.yml  scaleway.file.v1alpha1.Api.yml  scaleway.functions.v1beta1.Api.yml  scaleway.generative_apis.v1.Api.yml  scaleway.iam.v1alpha1.Api.yml  scaleway.inference.v1.Api.yml  scaleway.instance.v1.Api.yml  scaleway.interlink.v1beta1.Api.yml  scaleway.iot.v1.Api.yml  scaleway.ipam.v1.Api.yml  scaleway.k8s.v1.Api.yml  scaleway.kafka.v1alpha1.Api.yml  scaleway.key_manager.v1alpha1.Api.yml  scaleway.lb.v1.ZonedApi.yml  scaleway.mnq.v1beta1.NatsApi.yml  scaleway.mnq.v1beta1.SnsApi.yml  scaleway.mnq.v1beta1.SqsApi.yml  scaleway.mongodb.v1.Api.yml  scaleway.product_catalog.v2alpha1.PublicCatalogApi.yml  scaleway.qaas.v1alpha1.Api.yml  scaleway.rdb.v1.Api.yml  scaleway.registry.v1.Api.yml  scaleway.s2s_vpn.v1alpha1.Api.yml  scaleway.secret_manager.v1beta1.Api.yml  scaleway.serverless_jobs.v1alpha1.Api.yml  scaleway.serverless_sqldb.v1alpha1.Api.yml  (+5 more)
scripts/: fetch-scaleway.py  fmt-templates.sh  generate_all_sdks.sh
skygen/: Cargo.toml
skygen/assets/lib/: client.rs  default_client.rs  errors.rs  transport.rs  transport_reqwest.rs
skygen/assets/templates/: cargo.toml.tera  lib.rs.tera  mod.rs.tera  operation.rs.tera
skygen/src/: lib.rs
skygen/src/generator/: project.rs
skygen/src/resolver/: mod.rs  pointer.rs
src/: generator.rs  lib.rs
