[package]
name = "cloudflavor-rust-template"
version = "0.1.0"
edition = "2021"
authors = ["Victor Palade <victor@cloudflavor.io>"]
description = "Placeholder application description"
license = "Apache-2.0"
repository = "https://github.com/cloudflavor/placeholder"
readme = "README.md"

[[bin]]
name = "placeholder"
path = "src/bin/placeholder.rs"

[dependencies]
anyhow = "1.0.79"
structopt = "0.3.26"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
