[package]
name = "skygen"
version = "0.1.0"
edition = "2021"
authors = ["Victor Palade <victor@cloudflavor.io>"]
description = "Generates Rust SDKs for cloud providers from their OpenAPIv3 specs"
license = "Apache-2.0"
repository = "https://github.com/cloudflavor/skygen"
readme = "README.md"

[[bin]]
name = "skygen"
path = "src/bin/skygen.rs"

[dependencies]
anyhow = "1.0.82"
async-trait = "0.1.79"
clap = "2.34.0"
heck = "0.5.0"
include_dir = { version = "0.7.3", features = ["glob"] }
openapiv3 = "2.0.0"
serde = "1.0.197"
serde_json = "1.0.115"
serde_yaml = "0.9.32"
structopt = "0.3.26"
tera = "1.19.1"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
typify = "0.0.14"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
schemars = "0.8.21"
