[package]
name = "skygen"
version = "0.1.0"
edition = "2021"
authors = ["Victor Palade <victor@cloudflavor.io>"]
description = "Generates Rust SDKs for cloud providers from their OpenAPIv3 specs"
license = "Apache-2.0"
repository = "https://github.com/cloudflavor/skygen"
readme = "README.md"

[[bin]]
name = "skygen"
path = "src/bin/skygen.rs"

[dependencies]
anyhow = "1.0.82"
openapiv3 = "2.0.0"
serde = "1.0.197"
serde_json = "1.0.115"
serde_yaml = "0.9.32"
structopt = "0.3.26"
tokio = { version = "1.36.0", features = ["fs", "rt-multi-thread", "macros"] }
toml =  "0.8.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
